bk_ida/gccida/c3/scan_rtx
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1124:37: error: must use 'enum' tag to refer to type 'reg_class'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, rtx *type, int earlyclobber) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1124:51: error: must use 'enum' tag to refer to type 'scan_actions'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, rtx *type, int earlyclobber) 
                                                  ^
                                                  enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1124:7: error: conflicting types for 'scan_rtx'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, rtx *type, int earlyclobber) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:91:13: note: previous declaration is here
static void scan_rtx PARAMS ((rtx, rtx *, enum reg_class,
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1126:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v7; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1135:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+0h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1136:1: error: must use 'enum' tag to refer to type 'scan_actions'
scan_actions actiona; // [rsp+4h] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1158:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( rtx)v9[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/regrename.c:1205:49: error: use of undeclared identifier 'op_type'
scan_rtx( insna, ( rtx *)v9->fld, a3, action, ( op_type)( 2 * ( v7 != OP_IN)), earlyclobber); 
                                                ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/scan_rtx/src/obj/regrename.o] Error 1
